--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
     name: Xcode ${{ matrix.xcode }}
     strategy:
       matrix:
-        xcode: ["12.5.1", "13.0", "13.2.1"]
+        xcode: ["12.5.1", "13.0", "13.3.1", "13.4"]
     steps:
     - uses: actions/checkout@master
     - name: Set Xcode
