--- a/Tests/Fixtures/paths_test/included_paths_test.yml
+++ b/Tests/Fixtures/paths_test/included_paths_test.yml
@@ -32,7 +32,8 @@ aggregateTargets:
   IncludedAggregateTarget:
     targets:
       - IncludedTarget
-      - AnotherProject/ExternalTarget
+      - project: AnotherProject/ExternalTarget
+      - package: ../SPM-project/spm-project
     configFiles:
       Config: config
     buildScripts:
