update fixtures to be specific
`local:` should be optional for backwards compatibility

--- a/Tests/Fixtures/legacy_paths_test/legacy_included_paths_test.yml
+++ b/Tests/Fixtures/legacy_paths_test/legacy_included_paths_test.yml
@@ -26,7 +26,7 @@ targets:
 aggregateTargets:
   IncludedAggregateTarget:
     targets:
-      - IncludedTarget
+      - local: IncludedTarget
     configFiles:
       Config: config
     buildScripts:
