--- a/Tests/Fixtures/paths_test.yml
+++ b/Tests/Fixtures/paths_test.yml
@@ -26,7 +26,7 @@ targets:
 aggregateTargets:
   NewAggregateTarget:
     targets:
-      - NewTarget
+      - local: NewTarget
     configFiles:
       Config: config
     buildScripts:
