--- a/Tests/Fixtures/paths_test/recursive_test/recursive_test.yml
+++ b/Tests/Fixtures/paths_test/recursive_test/recursive_test.yml
@@ -26,7 +26,7 @@ targets:
 aggregateTargets:
   RecursiveAggregateTarget:
     targets:
-      - RecursiveTarget
+      - local: RecursiveTarget
     configFiles:
       Config: config
     buildScripts:
